# metacore-api

./: Dockerfile.dev  README.md  docker-compose.yaml  lerna.json  package-lock.json  package.json
api-gateway/: Cargo.toml  Development.env  Dockerfile  Rocket.toml  start.sh
api-gateway-deprecated/: package-lock.json  package.json  tsconfig.json
api-gateway-deprecated/src/: index.ts
api-gateway/src/: index.ts  main.rs
api-gateway/src/config/: app.rs  mod.rs
api-gateway/src/errors/: mod.rs
api-gateway/src/middleware/: mod.rs
api-gateway/src/routes/: health.rs  mod.rs
api-gateway/src/routes/users/: mod.rs
api-gateway/src/services/: mod.rs
customer-activity-service/: package.json
inventory-service/: package.json  tsconfig.json
kafka-setup/: package-lock.json  package.json  topics.ts  tsconfig.json
nomad/: api-gateway.nomad  base.nomad  customer.nomad  inventory.nomad  payments.nomad  purchasing.nomad  sales.nomad  user.nomad
nomad/infrastructure/: kafka.nomad  postgres.nomad
payments-service/: package.json  tsconfig.json
postgres-setup/: init.sql
purchasing-service/: package.json
sales-service/: package.json
scripts/: deploy.sh  nomad-helper.js
shared/: index.ts  package-lock.json  package.json  tsconfig.json
shared/db/: client.ts  postgres.ts  types.ts
shared/kafka/: consumer.ts  producer.ts  types.ts
shared/utils/: logger.test.ts  logger.ts
user-service/: babel.config.js  jest.config.js  package-lock.json  package.json
user-service/src/: app.ts  index.ts
user-service/tests/: user.repository.test.ts  user.service.test.ts
(+20 files in other folders)
