[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9.3.1"
env_logger = "0.11.6"
log = "0.4"
dotenv = "0.15"
thiserror = "2.0.12"
time = "0.3"
dashmap = "6.1.0"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
uuid = { version = "1.15.1", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
